# hexapod

hexa_body/: CMakeLists.txt  package.xml
hexa_body/src/: body.cpp
hexa_control/: CMakeLists.txt  package.xml  package.xml~
hexa_control/src/: control.cpp
hexa_kinematics/: CMakeLists.txt  package.xml  package.xml~
hexa_kinematics/msg/: LegsJointsState.msg
hexa_kinematics/src/: kinematics.cpp
hexa_legs/: CMakeLists.txt  package.xml  package.xml~
hexa_legs/src/: legs.cpp
hexa_msgs/: CMakeLists.txt  package.xml  package.xml~
hexa_msgs/msg/: AngleValue.msg  AnglesValues.msg
hexa_msgs/srv/: LegsJointsStateSrv.srv
qt_hexa/: CMakeLists.txt  mainpage.dox  package.xml
qt_hexa/include/qt_hexa/: main_window.hpp  qnode.hpp
qt_hexa/src/: main.cpp  main_window.cpp  qnode.cpp
qt_hexa/ui/: main_window.ui
vrep_hexapod_simulator/: CMakeLists.txt  package.xml
vrep_hexapod_simulator/src/: rosHexapod.cpp  rosHexapod_1 (copy).cpp
vrep_plugin/: CMakeLists.txt
vrep_plugin/include/vrep_plugin/: ROS_server.h
vrep_plugin/src/: ROS_server.cpp  vrep_plugin.cpp
