<package>
  <name>hexa_msgs</name>
  <description>hexapod hexa_msgs</description>
  <maintainer email="marc@coppeliarobotics.com">Marc</maintainer>
  <version>0.0.0</version>
  <author>Marc</author>
  <license>GPLv3</license>
  <url>http://www.coppeliarobotics.com</url>
  <buildtool_depend>catkin</buildtool_depend>
  <build_depend>message_generation</build_depend>
  <build_depend>std_msgs</build_depend>
  <run_depend>std_msgs</run_depend>
  <run_depend>message_runtime</run_depend>
</package>
